[gd_scene load_steps=8 format=3 uid="uid://2wteeq0d1tir"]

[ext_resource type="Script" path="res://timed_laser_follow.gd" id="1_0hww4"]
[ext_resource type="PackedScene" uid="uid://chhqcrmrb3k1n" path="res://death_hit_box.tscn" id="1_m6xy3"]
[ext_resource type="Shader" path="res://toggle_death_area.gdshader" id="3_yc0an"]
[ext_resource type="AudioStream" uid="uid://djqaf0siduplw" path="res://sounds/sfx/charge.wav" id="4_s33gn"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lw36f"]
size = Vector2(464, 272)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_841y6"]
size = Vector2(16, 272)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_6qygu"]
shader = ExtResource("3_yc0an")
shader_parameter/beams = 2
shader_parameter/energy = 3.0
shader_parameter/roughness = 3
shader_parameter/frequency = 10
shader_parameter/speed = 1.0
shader_parameter/thickness = 0.1
shader_parameter/outline_thickness = 0.1
shader_parameter/beam_difference = 0.0
shader_parameter/glow = 0.0
shader_parameter/outline_glow = 0.0
shader_parameter/color = Color(0.91, 1, 1, 1)
shader_parameter/outline_color = Color(1, 0, 0, 1)
shader_parameter/progress = 1.0
shader_parameter/y_offset = 0.0
shader_parameter/fixed_edge_size = 0.18
shader_parameter/noise_scale = Vector2(1, 1)

[node name="timed_laser_follow" type="Node2D"]
script = ExtResource("1_0hww4")

[node name="trigger" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="trigger"]
position = Vector2(232, 136)
shape = SubResource("RectangleShape2D_lw36f")

[node name="death_hit_box" parent="." instance=ExtResource("1_m6xy3")]
position = Vector2(8, 8)

[node name="CollisionShape2D" parent="death_hit_box" index="0"]
position = Vector2(0, 128)
shape = SubResource("RectangleShape2D_841y6")

[node name="ColorRect" type="ColorRect" parent="death_hit_box"]
material = SubResource("ShaderMaterial_6qygu")
offset_left = 16.0
offset_top = -8.0
offset_right = 288.0
offset_bottom = 24.0
rotation = 1.57079

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="death_hit_box"]
position = Vector2(0, 128)
stream = ExtResource("4_s33gn")
autoplay = true
max_distance = 200.0

[connection signal="body_entered" from="trigger" to="." method="_on_trigger_body_entered"]
[connection signal="body_exited" from="trigger" to="." method="_on_trigger_body_exited"]

[editable path="death_hit_box"]
